sol laudon final site

--- a/index.html
+++ b/index.html
@@ -10,43 +10,76 @@
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+      <link type="text/css" rel="stylesheet" href="styles.css">
   </head>
   <body>
     <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
       <script type="text/javascript" src="js/materialize.min.js"></script>
-      <nav>
-    <!--header-->
-    <div class="nav-wrapper blue">
-      <a href="#" class="brand-logo">Sol's (falafel) Balls</a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a src="order.html">Get falafel!</a></li>
-      </ul>
-    </div>
-    <!--footer-->
-    <footer class="page-footer blue">
-         <div class="container">
-           <div class="row">
-             <div class="col l6 s12">
-               <h5 class="white-text">Sol's (falafel) Balls</h5>
-               <p class="grey-text text-lighten-4">All the falafel you can eat while watching Scilicon Valley</p>
-             </div>
-             <div class="col l4 offset-l2 s12">
-               <h5 class="white-text">Links</h5>
-               <ul>
-                 <li><a class="grey-text text-lighten-3" href="#!">Home </a></li>
-                 <li><a class="grey-text text-lighten-3" href="#!">Get falafel!</a></li>
-               </ul>
-             </div>
-           </div>
-         </div>
-         <div class="footer-copyright">
-           <div class="container">
-           © 2017 Sol's (falafel) Balls
-           </div>
-         </div>
-       </footer>
 
-  </nav>
+    <!--header-->
+    <nav>
+      <div class="nav-wrapper blue">
+        <a href="index.html" class="brand-logo indent">Sol's Falafel Balls</a>
+        <a href="index.html" data-activates="mobile-demo"     class="button-collapse"><i class="material-icons">menu</i></a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="order.html">Get falafel!</a></li>
+        </ul>
+        <ul class="side-nav" id="mobile-demo">
+          <li><a href="order.html">Get falafel!</a></li>
+        </ul>
+      </div>
+    </nav>
+
+    <main>
+      <div class="col m12">
+        <div class="row">
+          <div class="background">
+            <div class="center center_box">
+              <h1 class="center white-text title">Falafel, delivered</h1>
+              <a class="btn-large pink" href="order.html">Place An Order</a>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="row black-text">
+            <div class="col m3 offset-m2 s12">
+              <h5 class="red-text">Good Food</h5>
+              <p>A wise man once said: "Eat Falafel". Another wise man once said: "Eat Hummus". We have taken these two maxims to heart and pioneered a new philosophy, which goes something like this: "Eat Falafel AND Hummus".</p>
+            </div>
+            <div class="col m3 s12">
+              <h5 class="red-text">Right Now</h5>
+              <p>The only thing more important that eating Falafel, is eating Hummus and Falafel. And the only thing more important than eating Hummus and Falafel, is eating eating Hummus and Falafe RIGHT NOW!!</p>
+            </div>
+            <div class="col m3 s12">
+              <h5 class="red-text">For Cheap</h5>
+              <p>Because duh. The best food is cheap food.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer class="page-footer blue">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Sol's Falafel Balls</h5>
+            <p class="grey-text text-lighten-4">Falafel, delivered.</p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="index.html">Home</a></li>
+              <li><a class="grey-text text-lighten-3" href="order.html">Order delivery</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
+        © 2017 Sol's Falafel Balls
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
